--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -2,16 +2,24 @@
     <div class="content-inner-wrapper">
         <h1 class="center">Start Here</h1>
         <p>
-            Welcome to VISUALZ. When you open the app click new set. A new track with some content will be created for
+            Welcome to Visulz. When you open the app click new set. A new track with some content will be created for
             you automatically. You can
             toggle between the Track List and Content in the left sidebar.
         </p>
-        <!-- 
+
+        <p>
+            The audio analyzer is one of the main components to Visualz. Using volume amplitude and peak detection
+            Visualz
+            detects timing to trigger the transition of scenes, and activate fx in your tracks.
+        </p>
+
         <p>
             If you're ready to learn more checkout the <a routerLink="/user-guide">User Guide</a>.
-        </p> -->
+        </p>
+
         <app-htw></app-htw>
 
+        <br><br><br>
 
         <!--         
         <p>
