--- a/src/app/user-guide/user-guide.component.html
+++ b/src/app/user-guide/user-guide.component.html
@@ -1,3 +1,149 @@
-<p>
-  user-guide works!
-</p>
+<div class="content-wrapper normal">
+    <div class="content-inner-wrapper">
+
+        <h1 class="center">User Guide</h1>
+
+        <app-how-a></app-how-a>
+        <div class="clearfix"></div>
+
+        <p>
+            The rest of the user guide is in progress.
+            Check back and stay tuned for more updates to the app!
+        </p>
+
+        <p>
+            New features, fx, and user requests are being added regularly.
+            We're also working on user tutorials and more instructional material.
+            Get notified about new releases and other updates.
+        </p>
+
+        <!-- Begin Mailchimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+            #mc_embed_signup {
+                clear: left;
+                width: 100%;
+            }
+
+            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+        	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+
+
+        <div id="mc_embed_signup">
+            <form #form
+                action="https://dutchess.us7.list-manage.com/subscribe/post?u=81486f81685beb71289ee6fe1&amp;id=ea72b92f29"
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <input style="width:50vw; height:80px; display:block; margin: 0px auto; font-size:35px;"
+                        type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address"
+                        required>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_81486f81685beb71289ee6fe1_ea72b92f29" tabindex="-1" value="">
+                    </div>
+                    <div class="clear">
+                        <input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe"
+                            class="button mat-button" (click)="form.submit()"
+                            style="clear: both; color:#333; height: 70px; font-size: 20px; margin-top: 20px; padding:20px;">
+                    </div>
+                </div>
+            </form>
+
+        </div>
+
+        <!--         
+        <p>
+            Open the content menu by opening the content menu using the conent Add some content by clicking the add content button to open the menu. 
+        </p>
+
+        <p>
+            Great. Now that you have a gif in there you can see how easy it is to add more types of content to your
+            track. You can control content details and settings in the right sidebar. Just click the block you want to
+            edit.
+        </p>
+
+        <h2>Beat Visualizer</h2>
+
+        <p>
+            The beat visualizer is one of the main pieces of VISUALZ. It uses volume amplitude and peak detection to
+            detect beats and changes in the music.
+        </p>
+
+        <p>
+            The threshold for beat detection can be adjusted to make it more or less sensitive or to handle different
+            volume levels. The threshold setting is located in the Track Settings panel, so you can have different
+            thresholds per track.
+        </p>
+
+        <p>
+            By default content changes on the main screen every four beat changes (~every measure). The main screen can
+            change on the beat, every other beat, the measure, or every other measure. This option is in the
+            Track Settings panel.
+        </p>
+
+        <h2>Content Blocks</h2>
+
+        <p>
+            You can compose a set or track with different types of visual content. These content types are called
+            content blocks. When you click on a type of conent in the left sidebar it will be added to the track's
+            content slots. Settings for individual content blocks can be found in the Content Settings panel which is
+            visible when you select a block in the track's content slots.
+        </p>
+
+        <p>
+            There are several types of content blocks in VISUALZ:
+        </p>
+
+        <p>
+            <strong>Image</strong> - Just like it sounds you can upload any image you want in your set/track.
+        </p>
+
+        <p>
+            <strong>Video</strong> - Upload any video to your set/track.
+        </p>
+
+        <p>
+            <strong>Webcam</strong> - Connect your webcam to include shots of the artist or the crowd.
+        </p>
+
+        <p>
+            <strong>Color</strong> - Very simple color content.
+        </p>
+
+        <p>
+            <strong>Text</strong> - Need some text on the screen? That's what this is for.
+        </p>
+
+        <p>
+            <strong>Bubbles</strong> - Bubbles effect. This is one of the first code generated effects in the system.
+            There will be many more code based effects added as new versions release.
+        </p>
+
+        <p>
+            <strong>Oscilliscope</strong> - An actual oscilliscope code generated effect that responds to the actual
+            audio frequencies in the music.
+        </p>
+
+        <p>
+            <strong>Giphy</strong> - The gif block will grab a random gif and insert it into the set. You can type in a
+            search tag to get gifs related to any subject you want.
+        </p>
+
+        <p>
+            <strong>FanCam</strong> - The FanCam block is where selfies from your audience's mobile devices will appear.
+        </p>
+
+        <p>
+            <strong>CrowdScreen</strong> - The CrowdScreen link block displays the number people have to text to
+            receive the link that connects them to your VISUALZ composition.
+        </p>
+
+        <p>
+            We are creating more how-to content and resources all the time so check back or contact us if you have any
+            questions.
+        </p> -->
+
+    </div>
+</div>
