--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -300,9 +300,14 @@
                 style="margin:120px auto; background: #333; border-radius: 5px; display: block; box-shadow:0px 10px 60px 0px #aaa;">
             </app-htw>
         </div>
-        <!-- <p class="center">
-            If you're ready to learn more checkout the <a routerLink="/user-guide">User Guide</a>.
-        </p> -->
+        <h2 class="center" style="line-height: 40px;">
+            Ready to learn more?
+            <br>
+            <a routerLink="/how-it-works">Start Here</a>.
+        </h2>
+
+
+        <br><br><br>
 
 
         <!-- Begin Mailchimp Signup Form -->
