user guide updates

--- a/src/app/how-a/how-a.component.html
+++ b/src/app/how-a/how-a.component.html
@@ -3,7 +3,8 @@
 <p>
     Sets can have multiple tracks. Your tracks have visual scenes.
     Scenes are visual media content that can be gifs, images, video, l
-    ive camera video, graphic visualizers, and more...
+    ive camera video, graphic visualizers, and more.
+    <br>
 </p>
 
 <div class="how-to-a">
