--- a/src/app/user-guide/user-guide.component.html
+++ b/src/app/user-guide/user-guide.component.html
@@ -6,6 +6,15 @@
         <app-how-a></app-how-a>
         <div class="clearfix"></div>
 
+        <app-how-b></app-how-b>
+        <div class="clearfix"></div>
+
+        <app-how-c></app-how-c>
+        <div class="clearfix"></div>
+
+        <app-how-d></app-how-d>
+        <div class="clearfix"></div>
+
         <p>
             The rest of the user guide is in progress.
             Check back and stay tuned for more updates to the app!
