--- a/src/app/how-b/how-b.component.scss
+++ b/src/app/how-b/how-b.component.scss
@@ -7,7 +7,7 @@ h2.left {
     width: 100%;
 }
 
-.how-to-a {
+.how-to-b {
 
     position: relative;
     margin-top: 10px;
@@ -18,9 +18,11 @@ h2.left {
         display: block;
         float: left;
         clear: both;
+        max-width: 300px;
 
         &.border {
-            border: 1px solid #4a4a4a;
+            box-shadow: 10px 10px #222;
+            border: 1px solid #000;
         }
 
     }
@@ -31,27 +33,43 @@ h2.left {
         width: 100px;
         position: absolute;
         z-index: 1;
-        //transform: rotate(10deg);
 
-        &.one { width: 140px; top: 30px; left: 100px; }
-        &.two { width: 300px; top: 80px; left: 160px; }
-        &.three { width: 120px; top: 125px; left: 100px; }
-        &.four { width: 300px; top: 180px; left: 160px; }
-        &.five { width: 80px; top: 220px; left: 160px; }
-        &.six { width: 300px; top: 295px; left: 160px; }
-        &.seven { width: 300px; top: 385px; left: 160px; }
-        &.eight { width: 115px; top: 430px; left: 130px; }
-        &.nine { width: 300px; top: 490px; left: 160px; }
+        &.one { 
+            width: 300px; top: 10px; left: 70px; 
+        }
 
+        &.two { 
+            width: 420px; top: 50px; left: 160px; 
+        }
+
+        &.three { 
+            width: 250px; top: 95px; left: 100px; 
+
+        }
+
+        &.four { 
+            width: 300px; top: 270px; left: 160px; 
+
+        }
+
+        &.five { 
+            width: 190px; top: 315px; left: 160px; 
+
+        }
+
+        &.six { 
+            width: 300px; top: 390px; left: 160px; 
+
+        }
+       
         span {
             color: #fff;
             position: absolute;
-            right: -215px;
+            right: -214px;
             display: block;
             width: 200px;
             font-size: 14px;
             top: -30px;
-            //transform: rotate(-10deg);
 
         }
 
@@ -64,7 +82,6 @@ h2.left {
             font-size: 10px;
             line-height: 14px;
             top: -30px;
-            //transform: rotate(-10deg);
 
         }
     }
