user guide updates

--- a/src/app/user-guide/user-guide.component.html
+++ b/src/app/user-guide/user-guide.component.html
@@ -1,7 +1,7 @@
 <div class="content-wrapper normal">
     <div class="content-inner-wrapper">
 
-        <h1 class="center">User Guide</h1>
+        <h1 class="center">USER GUIDE</h1>
 
         <app-how-a></app-how-a>
         <div class="clearfix"></div>
