user guide updates

--- a/src/app/how-a/how-a.component.html
+++ b/src/app/how-a/how-a.component.html
@@ -2,10 +2,11 @@
 
 <p>
     Sets can have multiple tracks. Your tracks have visual scenes.
-    Scenes are visual media content that can be gifs, images, video, l
-    ive camera video, graphic visualizers, and more.
-    <br>
+    Scenes are visual media content that can be gifs, images, video,
+    live camera video, graphic visualizers, and more.
 </p>
+<br><br>
+
 
 <div class="how-to-a">
 
