--- a/src/app/user-guide/user-guide.component.html
+++ b/src/app/user-guide/user-guide.component.html
@@ -15,6 +15,16 @@
         <app-how-d></app-how-d>
         <div class="clearfix"></div>
 
+        <h2 style="width: 100%; text-align: left;">Overview</h2>
+        <p>
+            Hover/Press the sections below to gen an overview of the button or panel's purpose.
+        </p>
+        <br>
+        <app-htw></app-htw>
+        <div class="clearfix"></div>
+
+        <br><br><br>
+
         <p>
             The rest of the user guide is in progress.
             Check back and stay tuned for more updates to the app!
