--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper normal">
     <div class="content-inner-wrapper">
-        <h1 class="center">Start Here</h1>
+        <h1 class="center">START HERE</h1>
         <p>
             Welcome to Visulz. When you open the app click new set. A new track with some content will be created for
             you automatically. You can
