--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -411,8 +411,16 @@
 
         <h2 class="collab">
             Interested in collaborating?
-            <br>visualzapp.contact@gmail.com
         </h2>
+        <p>
+            The Visualz Team can and wants to do remote realtime visuals for your live streams.
+        </p>
+        <p>
+            Once live events are possible again we'd love to do live and remote visuals for those as well.
+        </p>
+        <p>
+            Contact visualzapp.contact@gmail.com to setup a demo or just talk about your visual needs as an artist.
+        </p>
     </div>
 </div>
 
