--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -2,62 +2,66 @@
     <div class="content-inner-wrapper">
         <h1 class="center">Resources</h1>
 
-        <h2>Where To Find Video Loops</h2>
+        <h2>Where To Find Visuals Content?</h2>
 
         <p>
-            Below is a list of places you can find great content to use in VISUALZ.
+            Vizualz has a creative commons viedeo library, gif search, and image search built in.
+            Making it very easy to find content fast.
+        </p>
+
+        <p>
+            Below is a list of other places you can find great content.
         </p>
 
         <ul>
-            <li><a href="https://www.beeple-crap.com/vjloops" target="_blank">Beeple Crap</a> - This guy is amazing. And
-                puts
-                out videos for commercial and non-commercial use. His videos work great in VISUALZ!</li>
-            <li><a href="https://docoptic.com/free/" target="_blank">DocOptic</a></li>
+            <li>
+                <a href="https://www.beeple-crap.com/vjloops" target="_blank">Beeple Crap</a>
+            </li>
+            <li>
+                <a href="https://docoptic.com/free/" target="_blank">DocOptic</a>
+            </li>
+            <li>
+                <a href="https://reddit.com/r/vjing" target="_blank">Vjing SubReddit</a>
+            </li>
+            <li>
+                <a href="https://giphy.com" target="_blank">Giphy</a>
+            </li>
         </ul>
 
-        <h3>Giphy</h3>
+        <h2>What Should I Have In My VJ Gear?</h2>
 
         <p>
-            <a href="https://giphy.com" target="_blank">https://giphy.com</a> - Giphy is an amazing resource. The
-            VISUALZ team has always held a special place
-            in its heart for Giphy even before we existed. VISUALZ comes with a built-in Giphy
-            content feature.
-        </p>
-
-        <h2>How To Do Live Visuals</h2>
-
-        <p>
-            Visuals Starter Kit:
+            Its tough keeping track of what you need to bring to a set.
+            Here is a list of items you may find useful in your VJ Kit.
         </p>
 
         <ul>
-            <li>Windows or Apple OSx computer to run the VISUALZ software</li>
-            <li>Projector, LED wall, TV screen, or computer monitor</li>
-            <li>Projector screen</li>
-            <li>Projector screen stand</li>
-            <li><a
-                    href="https://www.google.com/search?ei=ozIlXYuVLoWltQaclJHICg&q=portable+power+station&oq=portable+power+station&gs_l=psy-ab.3..0l10.1037484.1041500..1042097...0.0..3.693.6667.0j11j2j2j4j3....2..0....1..gws-wiz.......0i71j0i131j0i67j0i273.mZnCJ9faEWY">
-                    Portable power station
-                </a>
-            </li>
-            <li>Big &amp; little zip ties</li>
+            <li>Windows or Apple OSx laptop to run the Visualz, and other software.</li>
+            <li>Projector (Its nice to have a few for different situations).</li>
+            <li>Projector screen(s) and stand(s).</li>
+            <li>Portable AC power station.</li>
             <li>Power Strip</li>
-            <li>Extension chord</li>
-            <li>Apple tv &amp; remote</li>
+            <li>Zip ties.</li>
+            <li>Extension cords.</li>
+            <li>Apple TV &amp; Remote</li>
             <li>HDMI cable</li>
             <li>VGA cable</li>
             <li>HDMI -> VGA adapter</li>
+            <li>HDMI -> Thunderbolt adapter</li>
+            <li>HDMI -> USB adapter</li>
         </ul>
 
-        <p>
-            Once you have your gear your ready. Creating a track or a set is easy in VISUALZ. Checkout the <a
-                routerLink="/how-it-works">Learn Page</a> to see how to do it. But trust me it's very simple.
-        </p>
+        <h2>What Software Can Help Me?</h2>
 
         <p>
-            When you are done composing your set in VISUALZ. Push the play button, and then the fullscreen button.
-            You're
-            doing it.
+            Other softwares and online tools that can be very useful.
         </p>
+
+        <ul>
+            <li><a href="https://handbrake.fr/" target="_blank">HandBrake</a> for converting video.</li>
+        </ul>
+
+        <br><br><br>
+
     </div>
 </div>
