--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -5,7 +5,7 @@
 
             Create realtime audio reactive
             graphical visualizations and experiences quickly and easily.
-            Intended for Vjs, Djs, Artists, and Venues.
+            Intended for VJs, DJs, Bands, Artists, Live Streams, Events, and Venues.
             <!-- Free visual composition tools for live events &amp; streams. Hey DJs, VJs, Artists, and Venues. -->
         </h2>
         <a routerLink="/download" class="download">GET IT NOW</a><Br>
@@ -135,16 +135,61 @@
     <div class="content-inner-wrapper main-feature">
         <img src="../../assets/images/projection.jpg" />
         <div class="feature-text">
-            <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">cast_connected</mat-icon>
-            <h1>Audio Graphical</h1>
-            <h2>Visualizations to the beat of your music</h2>
+            <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">volume_up</mat-icon>
+            <h1>Audio Reactive</h1>
+            <h2>FX, Transitioning, &amp; Visualizations to the beat of your music</h2>
             <div class="big-only">
                 <p>
-                    Visualz is a tool for creating visual compositions that automatically sync and change with music in
-                    realtime.
+                    Visualz is a tool for easily creating visual compositions that automatically sync and change with
+                    music in realtime.
                 </p>
                 <p>
-                    Immediately make your event a better experience.
+                    Immediately make your event or live stream a better experience.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<header class="skew white"></header>
+
+<div class="content-wrapper white feature">
+    <div class="content-inner-wrapper main-feature">
+        <img src="../../assets/images/feature2.jpg" />
+        <div class="feature-text">
+            <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">cast_connected</mat-icon>
+            <h1>Remote OBS Integration</h1>
+            <h2>Stream to remote browser and source into OBS</h2>
+            <div class="big-only">
+                <p>
+                    Live stream host in New York and your DJs are in Seattle.
+                    But you're in Chicago and need to run live realtime audio-reactive
+                    visuals in the live stream!?!?
+                </p>
+                <p>
+                    Now you can!
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<header class="skew white"></header>
+
+<div class="content-wrapper white feature">
+    <div class="content-inner-wrapper main-feature">
+        <img src="../../assets/images/crowdscreen.jpg" />
+        <div class="feature-text">
+            <mat-icon aria-hidden="false" aria-label="CrowdScreen" class="ico">mobile_screen_share</mat-icon>
+            <h1>Mobile Controller</h1>
+            <h2>Mobile device flashlight and screen control</h2>
+            <div class="big-only">
+                <p>
+                    The mobile controller is cutting-edge event tech.
+                    Create amazing visual experiences by incorporating audience devices.
+                </p>
+                <p>
+                    Again a complicated and expensive process is as easy as clicking a button.
                 </p>
             </div>
         </div>
@@ -174,28 +219,6 @@
     </div>
 </div>
 
-<header class="skew white"></header>
-
-<div class="content-wrapper white feature">
-    <div class="content-inner-wrapper main-feature">
-        <img src="../../assets/images/crowdscreen.jpg" />
-        <div class="feature-text">
-            <mat-icon aria-hidden="false" aria-label="CrowdScreen" class="ico">mobile_screen_share</mat-icon>
-            <h1>Mobile Controller</h1>
-            <h2>Mobile device flashlight and screen control</h2>
-            <div class="big-only">
-                <p>
-                    The mobile controller is cutting-edge event creating tech.
-                    Create amazing visual experiences by incorporating audience devices.
-                </p>
-                <p>
-                    Again a complicated and expensive process is as easy as clicking a button.
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-
 <header class="skew">
     <h2>More Features</h2>
 </header>
@@ -205,8 +228,8 @@
         <ul class="big">
             <li>
                 <mat-icon aria-hidden="false" aria-label="Audio-Reactive">equalizer</mat-icon>
-                <h1>Audio-Reactive</h1>
-                <strong>Real-time</strong> beat/amplitude detection and <strong>audio-reactive</strong> visual
+                <h1>Audio Reactive</h1>
+                <strong>Realtime</strong> beat/amplitude detection and <strong>audio reactive</strong> visual
                 playback.
             </li>
             <li>
@@ -214,6 +237,11 @@
                 <h1>Create Video Fast</h1>
                 <strong>Quickly</strong> drag &amp; drop to <strong>compose</strong> visual sets of tracks with videos,
                 images, effects and more.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Effects">flash_on</mat-icon>
+                <h1>Effects</h1>
+                The gamut of effects you'd expect, with some special sauce.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Gif/Image Search">image_search</mat-icon>
