--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -2,7 +2,7 @@
     <div class="content-inner-wrapper">
         <h1 class="center">CALENDAR</h1>
         <p class="center">
-            Here at Visaz we like to stay busy. Below is a list of visualz and visualz partners events.
+            Here at Visualz we like to stay busy. Below is a list of visualz and visualz partners events.
         </p>
 
         <iframe
