--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -163,11 +163,11 @@
             <div class="big-only">
                 <p>
                     Live stream host in New York and your DJs are in Seattle.
-                    But you're in Chicago and need to run live realtime audio-reactive
-                    visuals in the live stream!?!?
+                    You need to inject and control live realtime audio-reactive
+                    visuals in the live stream but you're in Chicago!?!?
                 </p>
                 <p>
-                    Now you can!
+                    Now you can do all that!
                 </p>
             </div>
         </div>
@@ -208,8 +208,7 @@
             <div class="big-only">
                 <p>
                     The FanCam feature is revolutionary for the visuals space. Now your audience can interact by taking
-                    a selfie.
-                    The image is then sent directly to the projection or wall.
+                    a selfie. The image is then sent directly to the projection, wall, or live stream.
                 </p>
                 <p>
                     Normally a complicated and expensive process is as easy as clicking a button.
