home page updates

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -4,7 +4,7 @@
         <h2>
 
             Create realtime audio reactive
-            graphical visualizations and experiences quickly and easily.
+            visualizations and experiences quickly and easily.
             Intended for VJs, DJs, Bands, Artists, Live Streams, Events, and Venues.
             <!-- Free visual composition tools for live events &amp; streams. Hey DJs, VJs, Artists, and Venues. -->
         </h2>
