--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -36,19 +36,21 @@
         </p>
 
         <ul>
-            <li>Windows or Apple OSx laptop to run the Visualz, and other software.</li>
+            <li>Windows laptop or Macbook to run Visualz, and other software.</li>
             <li>Projector (Its nice to have a few for different situations).</li>
             <li>Projector screen(s) and stand(s).</li>
             <li>Portable AC power station.</li>
-            <li>Power Strip</li>
+            <li>Power strips.</li>
             <li>Zip ties.</li>
-            <li>Extension cords.</li>
-            <li>Apple TV &amp; Remote</li>
-            <li>HDMI cable</li>
-            <li>VGA cable</li>
-            <li>HDMI -> VGA adapter</li>
-            <li>HDMI -> Thunderbolt adapter</li>
-            <li>HDMI -> USB adapter</li>
+            <li>Extension cables.</li>
+            <li>Apple TV &amp; Remote.</li>
+            <li>HDMI cable.</li>
+            <li>VGA cable.</li>
+            <li>HDMI -> VGA adapter.</li>
+            <li>Thunderbolt -> HDMI adapter.</li>
+            <li>Thunderbolt -> VGA adapter.</li>
+            <li>USB -> HDMI adapter.</li>
+            <li>USB Female -> to <- Female adapeter.</li>
         </ul>
 
         <h2>What Software Can Help Me?</h2>
@@ -59,6 +61,9 @@
 
         <ul>
             <li><a href="https://handbrake.fr/" target="_blank">HandBrake</a> for converting video.</li>
+            <li><a href="https://obsproject.com/" target="_blank">OBS</a> for broadcasting live streams.</li>
+            <li><a href="https://staticz.com/soundsiphon/" target="_blank">SoundSiphon</a> for capturing computer audio
+                as input.</li>
         </ul>
 
         <br><br><br>
