--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -158,12 +158,12 @@
         <img src="../../assets/images/feature2.jpg" />
         <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">cast_connected</mat-icon>
-            <h1>Remote OBS Integration</h1>
-            <h2>Stream to remote browser and source into OBS</h2>
+            <h1>OBS Integration</h1>
+            <h2>Remote/Local visuals Streaming to a window or browser then sourced into OBS</h2>
             <div class="big-only">
                 <p>
                     Live stream host in New York and your DJs are in Seattle.
-                    You need to inject and control live realtime audio-reactive
+                    You need to inject and control live realtime audio reactive
                     visuals in the live stream but you're in Chicago!?!?
                 </p>
                 <p>
@@ -182,14 +182,15 @@
         <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="CrowdScreen" class="ico">mobile_screen_share</mat-icon>
             <h1>Mobile Controller</h1>
-            <h2>Mobile device flashlight and screen control</h2>
+            <h2>Mobile device flashlight and screen control
+                <br>(license required)</h2>
             <div class="big-only">
                 <p>
                     The mobile controller is cutting-edge event tech.
                     Create amazing visual experiences by incorporating audience devices.
                 </p>
                 <p>
-                    Again a complicated and expensive process is as easy as clicking a button.
+                    Another complicated and expensive process is now as easy as clicking a button.
                 </p>
             </div>
         </div>
@@ -204,14 +205,38 @@
         <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">camera_front</mat-icon>
             <h1>FanCam</h1>
-            <h2>Audience selfies sent to the wall in real time</h2>
+            <h2>Audience selfies sent to the wall in real time, and audience data collection
+                <br>(license required)</h2>
             <div class="big-only">
                 <p>
                     The FanCam feature is revolutionary for the visuals space. Now your audience can interact by taking
                     a selfie. The image is then sent directly to the projection, wall, or live stream.
                 </p>
                 <p>
-                    Normally a complicated and expensive process is as easy as clicking a button.
+                    Another complicated and expensive process is now as easy as clicking a button.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<header class="skew white"></header>
+
+<div class="content-wrapper white feature">
+    <div class="content-inner-wrapper main-feature">
+        <img src="../../assets/images/feature3.jpg" />
+        <div class="feature-text">
+            <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">view_compact</mat-icon>
+            <h1>All The Screens</h1>
+            <h2>Connect to all the screens locally and/or remotely</h2>
+            <div class="big-only">
+                <p>
+                    Stream to external windows and the browser.
+                    Distribute your visual setup.
+                </p>
+                <p>
+                    Another complicated and expensive process is now as easy as clicking a button.
+                    Support for even more advanced setups coming soon.
                 </p>
             </div>
         </div>
