--- a/src/app/stream-start/stream-start.component.html
+++ b/src/app/stream-start/stream-start.component.html
@@ -4,6 +4,13 @@
         <h1 class="center bigs">Start a Quaranstream</h1>
 
         <p>
+            <strong>
+                IF YOU'RE LOOKING TO ADD VISUALZ TO YOUR OBS STREAM.
+                PLEASE <a routerLink="/download">DOWNLOAD VISUALZ</a>.
+            </strong>
+        </p>
+
+        <p>
             Stay safe &amp; be smart out there. These are troubling times.
         </p>
         <p>
@@ -12,6 +19,7 @@
         <p>
             As expected there are audio-reactive visuals you can control on your stream.
         </p>
+
         <br>
 
         <form class="example-form" name="form1">
