--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -151,7 +151,7 @@
     </div>
 </div>
 
-<header class="skew white"></header>
+<!-- <header class="skew white"></header> -->
 
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
@@ -174,7 +174,7 @@
     </div>
 </div>
 
-<header class="skew white"></header>
+<!-- <header class="skew white"></header> -->
 
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
@@ -197,7 +197,7 @@
     </div>
 </div>
 
-<header class="skew white"></header>
+<!-- <header class="skew white"></header> -->
 
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
