--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -32,7 +32,7 @@
             <img src="../../assets/images/icon.ico" class="ico" />
 
             <div *ngIf="deviceInfo.os == 'Mac'" class="clearfix">
-                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.6.dmg" target="_blank"
+                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.7.dmg" target="_blank"
                     mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Mac
                 </a>
@@ -40,7 +40,7 @@
             </div>
 
             <div *ngIf="deviceInfo.os != 'Mac'" class="clearfix">
-                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-Setup-2.0.6w.rar" target="_blank"
+                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-Setup-2.0.7w.rar" target="_blank"
                     mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download Windows
                 </a>
@@ -49,7 +49,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.0.6</h1>
+            <h1>VISUALZ v2.0.7</h1>
 
             <div class="">
                 <h2>What's New in Version 2</h2>
@@ -78,6 +78,17 @@
                     <li>Much, much, more.</li>
                 </ul>
                 <div class="smaller">
+
+                    <!-- 4/28/20 -->
+                    <h2>Update 2.0.7</h2>
+                    <ul class='new'>
+                        <li>Added replicate track feature.</li>
+                        <li>Update to beat triggers.</li>
+                        <li>Update to thumbails overall.</li>
+                        <li>Bugfix to MP4 thumbnail issue.</li>
+                        <li>Bugfix to import gif issue.</li>
+                        <li>Bugfix to remote control QR.</li>
+                    </ul>
 
                     <!-- 4/21/20 -->
                     <h2>Update 2.0.6</h2>
