--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <button mat-button [matMenuTriggerFor]="menuT1">TOOLS</button>
     <mat-menu #menuT1="matMenu">
         <button mat-menu-item routerLink="/download">VISUALZ v2</button>
-        <button mat-menu-item routerLink="/start">LIVE STREAM IN BROWSER</button>
+        <button mat-menu-item routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
         <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
     </mat-menu>
     <!-- <button mat-button routerLink="/calendar">CALENDAR</button> -->
@@ -32,6 +32,7 @@
         <button mat-button routerLink="/">HOME</button>
         <button mat-button routerLink="/about">ABOUT</button>
         <button mat-button routerLink="/download">GET IT NOW</button>
+        <button mat-button routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
 
         <!-- <button mat-button [matMenuTriggerFor]="menu2">MARKET</button>
         <mat-menu #menu2="matMenu">
@@ -42,7 +43,7 @@
         <button mat-button [matMenuTriggerFor]="menuT">TOOLS</button>
         <mat-menu #menuT="matMenu">
             <button mat-menu-item routerLink="/download">VISUALZ v2</button>
-            <button mat-menu-item routerLink="/start">LIVE STREAM IN BROWSER</button>
+            <button mat-menu-item routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
             <!-- <button mat-menu-item routerLink="/cc-video-library">CC VIDEO LIBRARY</button> -->
             <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
             <!-- <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button> -->
@@ -102,8 +103,15 @@
     <a routerLink="https://www.instagram.com/visualzapp/">Instagram</a>
     -->
     <br>
-
+    <a href="https://www.buymeacoffee.com/visualz" target="_blank">
+        Using For Free? Buy Our Devs A Coffee.
+    </a>
+    <br>
     &copy; VISUALZ Copyright 2019-2020. All Rights Reserved.
     <br>
-    v2.0.6 created by <a href="https://karl.pb.studio" target="_blank">Karl</a>
+    v2.0.6
+    <!-- 
+    <br>
+    created by <a href="https://karl.pb.studio" target="_blank">Karl</a> 
+    -->
 </footer>
